Removed unecessary destructuring in Weapons page, fixed left-column layout issues with Select dropdown

--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,8 @@ input {
 .left-column {
   /* overflow-y: scroll; */
   grid-column: 1;
+  display: flex;
+  flex-direction: column;
   /* max-height: 100%; */
 }
 
